# Telegram-Forwarder-Bot-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  wiki-content.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: conf.py  index.rst
sessions/: session_+1234567890.session
source/core/: Bot.py  Telegram.py
source/dialog/: BaseDialog.py  DateRangeDialog.py  DeleteDialog.py  FindUserDialog.py  ForwardDialog.py  KeywordForwardDialog.py  MediaForwardDialog.py
source/menu/: AccountSelector.py  MainMenu.py
source/model/: Chat.py  Credentials.py  ForwardConfig.py  History.py
source/service/: ChatService.py  Forward.py  ForwardProgress.py  HistoryService.py  MessageForwardService.py  MessageQueue.py  MessageService.py
source/utils/: Console.py  Constants.py  DateUtils.py  RateLimiter.py
tests/: conftest.py  test_bot.py  test_forwarding_service.py  test_keyword_forward.py
web/: README.md  app.py
web/static/: style.css
web/templates/: index.html
