[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-forwarder-bot-v2"
version = "2.0.0"
description = "Async Telegram message forwarding bot"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["telegram", "bot", "async", "forwarding", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "telethon>=1.39.0",
    "rich>=13.7.0",
    "inquirerpy>=0.3.4",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "aiofiles>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
web = [
    "websockets>=12.0",
    "python-multipart>=0.0.6",
]

[project.urls]
Homepage = "https://github.com/klept0/Telegram-Forwarder-Bot-v2"
Repository = "https://github.com/klept0/Telegram-Forwarder-Bot-v2"
Issues = "https://github.com/klept0/Telegram-Forwarder-Bot-v2/issues"
Changelog = "https://github.com/klept0/Telegram-Forwarder-Bot-v2/blob/main/CHANGELOG.md"

[project.scripts]
telegram-forwarder = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["source*"]

[tool.setuptools.package-data]
"source" = ["**/*.json", "**/*.txt"]